# lib/db/src/schema/profiles.ts
@@ -7,6 +7,10 @@ export const profilesTable = pgTable("profiles", {
   username: text("username").notNull(),
   avatar: text("avatar"),
   theme: text("theme").notNull().default("light"),
+  imageTheme: text("image_theme").notNull().default("shapes"),
+  fontTheme: text("font_theme").notNull().default("default"),
+  fontSize: text("font_size").notNull().default("default"),
+  backgroundEnabled: boolean("background_enabled").notNull().default(true),
   highlightErrors: boolean("highlight_errors").notNull().default(true),
   showTimer: boolean("show_timer").notNull().default(true),
   soundEnabled: boolean("sound_enabled").notNull().default(true),
